Improvians/css/custom.css
/* ... */
.filter__control:focus, .input__control:focus { outline: none; }

.header__bottom {
    position: absolute;
    max-width: calc(100% - 698px);
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    top: 0;
    height: 95px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.header__bottom .custom__dropdown { max-width: 401px; }
.header__bottom .bttn { padding-left: 15px; padding-right: 15px; }
.header__bottom [class^="rxicon-"] { font-size: 24px; }

.main { margin-top: 30px; }
.main .main { margin-top: 0; }

/*Footer*/
.floating__footer {
    position: absolute;
    bottom: 30px;
    left: 0;
    right: 0;
    width: 100%;
    text-align: center;
    z-index: 10;
}

.floating__footer ul {
    display: inline-flex;
    margin-bottom: 0;
    padding: 19px 20px;
    border-radius: 50px;
}

.floating__footer ul li:not(:first-child) {
    margin-left: 20px;
}

.floating__footer a {
    display: flex;
    align-items: center;
    padding: 18px 36px;
    color: rgba(255, 255, 255, 0.4);
    border-radius: 30px;
}

.floating__footer a.active, .floating__footer a:hover {
    color: rgba(255, 255, 255, 1);
    background: rgba(255, 255, 255, 0.1);
}

.floating__footer i {
    font-size: 26px;
    margin-right: 22px;
}

/*Dashboard*/
.dashboard__row {
    margin-top: 60px;
    padding-bottom: 30px;
}
.dashboard__block {
    background: #ffffff;
    border-radius: 20px;
    padding: 30px 35px;
}

.dashboard__block h2 { color: #2a2a2a; }

.dashboard__block h3, h3 {
    font-family: 'roboto-medium', sans-serif;
    font-size: 22px;
    margin-bottom: 22px;
}

.dashboard__block h4, h4 {
    font-family: 'roboto-medium', sans-serif;
    font-size: 18px;
    margin-bottom: 18px;
}

.dashboard__matrix {
    position: relative;
    display: flex;
    align-items: center;
    align-content: center;
    flex: 1;
    padding: 30px 22px;
}

.dashboard__matrix:not(:last-child) {
    margin-right: 44px;
}

.dashborad__stats {
    font-size: 42px;
    width: 110px;
    height: 110px;
    flex: 0 0 110px;
    border-radius: 100%;
    line-height: 110px;
    text-align: center;
    margin-right: 22px;
}

.dashborad__stats i { line-height: 110px; }

.stats--germination-seed { background: rgba(67,134,68, 0.1); }
.stats--plant-quality { background: rgba(149,192,86,0.1); }
.stats--facility-probability { background: rgba(16, 115,158, 0.1); }
.stats--labor-efficiency { background: rgba(35,68, 93, 0.1); }
.stats--site-capacity { background: rgba(26,178,201,0.1); }

.dashborad__stats .rxicon-icon-germination-seed { color: #438644; }
.dashborad__stats .rxicon-icon-plant-quality { color: #95c056; }
.dashborad__stats .rxicon-icon-facility-probability { color: #10739e; }
.dashborad__stats .rxicon-icon-labor-efficiency { color: #23445d; }
.dashborad__stats .rxicon-icon-site-capacity { color: #1ab2c9; }

.dashboard__matrixdetail h3 {
    font-size: 45px;
    margin-bottom: 0px;
}

.dashboard__matrixdetail span {
    color: #808080;
    font-size: 16px;
}

.dashboard__links {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    max-width: 380px;
    margin-left: auto;
    margin-right: auto;
    justify-content: space-between;
    margin-top: 5px;
    margin-bottom: 5px;
}

.dashboard__task {
    position: relative;
    color: #ffffff;
}

.dashboard__task:hover { color: #ffffff; }

.dashboard__task:nth-child(n+2) {
    margin-bottom: 12px;
}

.dashboard__task span {
    font-family: 'roboto-medium', sans-serif;
    font-size: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 0;
    right: 0;
    top:0;
    width: 100%;
    height: 100%;
    padding: 15px;
    text-align: center;
}

.block__head + .activity__graph {
    margin-top: 35px;
    overflow: hidden;
}

.graph__mark {
    position: relative;
    min-width: 36px;
    height: 50px;
    font-size: 16px;
    line-height: 16px;
    color: #808080;
}

.graph__mark:empty {
    height: 30px;
}

.graph__yaxis {
    margin-right: 68px;
}

.graph__yaxis .graph__mark:not(:last-child)::before {
    content: "";
    position: absolute;
    left: calc(100% + 12px);
    height: 1px;
    background: #f1f1f1;
    width: 1000px;
    top: 8px;
}

.graph__bar + .graph__bar:not(:last-child) {
    flex: 1 0 25%;
}

.graph__bar:last-child { margin-right: 68px; }

.graph__bar--line {
    position: relative;
    width: 6px;
    height: calc(100% - 80px);
    top: 8px;
    border-radius: 5px;
    background-color: #e4e4ed;
}

.graph__bar--line > span {
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.graph__bar--today {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 6px;
    border-radius: 5px;
    background: #21b4cb;
}

.graph__bar--week {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 6px;
    border-radius: 5px;
    background: #23445d;
}

.graph__xaxis {
    margin-top: 38px;
    transform: translateX(-50%);
    text-align: center;
    color: #2a2a2a;
    font-family: 'roboto-medium', sans-serif;
}

/*Filter Row*/
.filter__row { margin-top: 34px; }
.breadcrumb + .filter__row { margin-top: 15px; }
.filter__row .filter__control { width: auto; }
.filter__row > .filter__control:not(.bttn) { flex: 0 0 300px; }
.filter__control + * { margin-left: 20px; }
.filter__control:not(.filter__bttn) { color: #808080; font-size: 16px; }
.filter__bttn { flex-basis: 150px; min-width: 150px; }
.filter__search {
    background-image: url('../images/icons/icon-search.svg');
    background-position: left 24px center;
    background-size: 16px;
    background-repeat: no-repeat;
    padding-left: 58px;
}

/*Data Table*/
.filter__row + .data__table { margin-top: 30px; }
.data__table table { width: 100%; }
.data__table th {
    font-family: 'roboto-bold', sans-serif;
    color: #2a2a2a;
    background: #ffffff;
}
/* ... */

